@@ -1,5 +1,12 @@
 2004-12-01  John Luke  <john.luke@gmail.com>
 
+	* FileSelector/FileSelector.cs: modified patch
+	from Rubens Ramos <rubensr@users.sourceforge.net>
+	to use the default path from the property service
+	and make sure it exists before adding it as a bookmark
+
+2004-12-01  John Luke  <john.luke@gmail.com>
+
 	* FileSelector/FileSelector.cs: improve this to take advantage
 	of the FileChooser and remove my old hacks that were likely buggy
 	use a switch for adding the buttons
